# rusty-blitzcrank

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: api_key.rs  apiclient.rs  dispatcher.rs  lib.rs  matches_endpoint.rs  region.rs  summoner_endpoint.rs  timeline_types.rs  types.rs
src/analysis/: mod.rs
src/endpoints/: league.rs  mastery.rs  matches.rs  mod.rs  spectator.rs  status.rs  summoner.rs
