[package]
name = "rusty-blitzcrank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.11.3"
reqwest = "0.11.14"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-timer = "0.2.13"
